// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files 1`] = `
Array [
  "building.form-group-fac.ts",
  "building.model.ts",
  "building.properties.ts",
  "endpoints.ts",
  "index.ts",
  "site-collection.form-group-fac.ts",
  "site-collection.model.ts",
  "site-collection.properties.ts",
  "site.form-group-fac.ts",
  "site.model.ts",
  "site.properties.ts",
  "tag.form-group-fac.ts",
  "tag.model.ts",
  "tag.properties.ts",
  "unit-tag.form-group-fac.ts",
  "unit-tag.model.ts",
  "unit-tag.properties.ts",
  "unit-type.form-group-fac.ts",
  "unit-type.model.ts",
  "unit-type.properties.ts",
  "unit.form-group-fac.ts",
  "unit.model.ts",
  "unit.properties.ts",
]
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files 2`] = `
Array [
  "building.form-group-fac.ts",
  "building.model.ts",
  "building.properties.ts",
  "endpoints.ts",
  "index.ts",
  "site-collection.form-group-fac.ts",
  "site-collection.model.ts",
  "site-collection.properties.ts",
  "site.form-group-fac.ts",
  "site.model.ts",
  "site.properties.ts",
  "tag.form-group-fac.ts",
  "tag.model.ts",
  "tag.properties.ts",
  "unit-tag.form-group-fac.ts",
  "unit-tag.model.ts",
  "unit-tag.properties.ts",
  "unit-type.form-group-fac.ts",
  "unit-type.model.ts",
  "unit-type.properties.ts",
  "unit.form-group-fac.ts",
  "unit.model.ts",
  "unit.properties.ts",
]
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: building.form-group-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-unused-vars
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function BuildingFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl<string | null>(''),
    siteId: new FormControl<string | null>(''),
    identifier: new FormControl<string | null>(''),
    isEnabled: new FormControl<boolean | null>(''),
    site: new FormControl<Site | null>(''),
    units: new FormArray([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: building.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ISite } from './site.model';
import { IUnit } from './unit.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IBuilding {
  id?: string;
  siteId?: string;
  identifier?: string;
  isEnabled?: boolean;
  site?: ISite;
  units?: IUnit[];
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: building.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum BuildingProperties {
  ID = 'id',
  SITE_ID = 'siteId',
  IDENTIFIER = 'identifier',
  IS_ENABLED = 'isEnabled',
  SITE = 'site',
  UNITS = 'units',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: endpoints.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #endpoints-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum Endpoints {
  buildings = '/odata/v1/Buildings',
  siteCollections = '/odata/v1/SiteCollections',
  sites = '/odata/v1/Sites',
  units = '/odata/v1/Units',
  unitTypes = '/odata/v1/UnitTypes',
}
export interface IEndpoints {
  readonly buildings: string;
  readonly siteCollections: string;
  readonly sites: string;
  readonly units: string;
  readonly unitTypes: string;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: index.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export * from './building.form-group-fac';
export * from './building.model';
export * from './building.properties';
export * from './site-collection.form-group-fac';
export * from './site-collection.model';
export * from './site-collection.properties';
export * from './site.form-group-fac';
export * from './site.model';
export * from './site.properties';
export * from './tag.form-group-fac';
export * from './tag.model';
export * from './tag.properties';
export * from './unit-tag.form-group-fac';
export * from './unit-tag.model';
export * from './unit-tag.properties';
export * from './unit-type.form-group-fac';
export * from './unit-type.model';
export * from './unit-type.properties';
export * from './unit.form-group-fac';
export * from './unit.model';
export * from './unit.properties';
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: site.form-group-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-unused-vars
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function SiteFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl<string | null>(''),
    tenantId: new FormControl<string | null>(''),
    accountId: new FormControl<string | null>(''),
    accountName: new FormControl<string | null>(''),
    siteCollectionId: new FormControl<string | null>(''),
    number: new FormControl<string | null>(''),
    name: new FormControl<string | null>(''),
    addressLine1: new FormControl<string | null>(''),
    addressLine2: new FormControl<string | null>(''),
    city: new FormControl<string | null>(''),
    state: new FormControl<string | null>(''),
    zip: new FormControl<string | null>(''),
    isEnabled: new FormControl<boolean | null>(''),
    siteCollection: new FormControl<SiteCollection | null>(''),
    buildings: new FormArray([]),
    units: new FormArray([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: site.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ISiteCollection } from './site-collection.model';
import { IBuilding } from './building.model';
import { IUnit } from './unit.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface ISite {
  id?: string;
  tenantId?: string;
  accountId?: string;
  accountName?: string;
  siteCollectionId?: string;
  number?: string;
  name?: string;
  addressLine1?: string;
  addressLine2?: string;
  city?: string;
  state?: string;
  zip?: string;
  isEnabled?: boolean;
  siteCollection?: ISiteCollection;
  buildings?: IBuilding[];
  units?: IUnit[];
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: site.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum SiteProperties {
  ID = 'id',
  TENANT_ID = 'tenantId',
  ACCOUNT_ID = 'accountId',
  ACCOUNT_NAME = 'accountName',
  SITE_COLLECTION_ID = 'siteCollectionId',
  NUMBER = 'number',
  NAME = 'name',
  ADDRESS_LINE_1 = 'addressLine1',
  ADDRESS_LINE_2 = 'addressLine2',
  CITY = 'city',
  STATE = 'state',
  ZIP = 'zip',
  IS_ENABLED = 'isEnabled',
  SITE_COLLECTION = 'siteCollection',
  BUILDINGS = 'buildings',
  UNITS = 'units',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: site-collection.form-group-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-unused-vars
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function SiteCollectionFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl<string | null>(''),
    tenantId: new FormControl<string | null>(''),
    number: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    name: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    code: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    addressLine1: new FormControl<string | null>(''),
    addressLine2: new FormControl<string | null>(''),
    city: new FormControl<string | null>(''),
    state: new FormControl<string | null>('', {validators: Validators.compose([Validators.minLength(2), Validators.maxLength(2)]) }),
    zip: new FormControl<string | null>('', {validators: Validators.compose([Validators.minLength(5), Validators.maxLength(10)]) }),
    isSchedulerEnabled: new FormControl<boolean>('', { validators: Validators.required, nonNullable: true } ),
    siteCount: new FormControl<number | null>('', {validators: Validators.compose([Validators.min(-250), Validators.max(49)]) }),
    workCategoryTypes: new FormControl<string | number>('', { validators: Validators.required, nonNullable: true } ),
    buildings: new FormArray([]),
    sites: new FormArray([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: site-collection.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IBuilding } from './building.model';
import { ISite } from './site.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface ISiteCollection {
  id?: string;
  tenantId?: string;
  number?: string;
  name?: string;
  code?: string;
  addressLine1?: string;
  addressLine2?: string;
  city?: string;
  state?: string;
  zip?: string;
  isSchedulerEnabled?: boolean;
  siteCount?: number;
  workCategoryTypes?: string | number;
  buildings?: IBuilding[];
  sites?: ISite[];
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: site-collection.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum SiteCollectionProperties {
  ID = 'id',
  TENANT_ID = 'tenantId',
  NUMBER = 'number',
  NAME = 'name',
  CODE = 'code',
  ADDRESS_LINE_1 = 'addressLine1',
  ADDRESS_LINE_2 = 'addressLine2',
  CITY = 'city',
  STATE = 'state',
  ZIP = 'zip',
  IS_SCHEDULER_ENABLED = 'isSchedulerEnabled',
  SITE_COUNT = 'siteCount',
  WORK_CATEGORY_TYPES = 'workCategoryTypes',
  BUILDINGS = 'buildings',
  SITES = 'sites',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: tag.form-group-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-unused-vars
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function TagFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl<string | null>(''),
    name: new FormControl<string | null>(''),
    value: new FormControl<string | null>(''),
    unitTags: new FormArray([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: tag.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IUnitTag } from './unit-tag.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface ITag {
  id?: string;
  name?: string;
  value?: string;
  unitTags?: IUnitTag[];
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: tag.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum TagProperties {
  ID = 'id',
  NAME = 'name',
  VALUE = 'value',
  UNIT_TAGS = 'unitTags',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit.form-group-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-unused-vars
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function UnitFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl<string | null>(''),
    number: new FormControl<string | null>(''),
    unitTypeId: new FormControl<string | null>(''),
    siteId: new FormControl<string | null>(''),
    buildingId: new FormControl<string | null>(''),
    isEnabled: new FormControl<boolean | null>(''),
    building: new FormControl<Building | null>(''),
    site: new FormControl<Site | null>(''),
    unitType: new FormControl<UnitType | null>(''),
    unitTags: new FormArray([]),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IBuilding } from './building.model';
import { ISite } from './site.model';
import { IUnitType } from './unit-type.model';
import { IUnitTag } from './unit-tag.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IUnit {
  id?: string;
  number?: string;
  unitTypeId?: string;
  siteId?: string;
  buildingId?: string;
  isEnabled?: boolean;
  building?: IBuilding;
  site?: ISite;
  unitType?: IUnitType;
  unitTags?: IUnitTag[];
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum UnitProperties {
  ID = 'id',
  NUMBER = 'number',
  UNIT_TYPE_ID = 'unitTypeId',
  SITE_ID = 'siteId',
  BUILDING_ID = 'buildingId',
  IS_ENABLED = 'isEnabled',
  BUILDING = 'building',
  SITE = 'site',
  UNIT_TYPE = 'unitType',
  UNIT_TAGS = 'unitTags',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit-tag.form-group-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-unused-vars
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function UnitTagFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl<string | null>(''),
    unitId: new FormControl<string | null>(''),
    tagId: new FormControl<string | null>(''),
    value: new FormControl<string | null>(''),
    tag: new FormControl<Tag | null>(''),
    unit: new FormControl<Unit | null>(''),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit-tag.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ITag } from './tag.model';
import { IUnit } from './unit.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IUnitTag {
  id?: string;
  unitId?: string;
  tagId?: string;
  value?: string;
  tag?: ITag;
  unit?: IUnit;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit-tag.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum UnitTagProperties {
  ID = 'id',
  UNIT_ID = 'unitId',
  TAG_ID = 'tagId',
  VALUE = 'value',
  TAG = 'tag',
  UNIT = 'unit',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit-type.form-group-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-unused-vars
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR

export function UnitTypeFormGroupFac(): FormGroup {
  return new FormGroup({
    id: new FormControl<string | null>(''),
    code: new FormControl<string | null>(''),
    description: new FormControl<string | null>(''),
  });
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit-type.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IUnitType {
  id?: string;
  code?: string;
  description?: string;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should generate files: unit-type.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum UnitTypeProperties {
  ID = 'id',
  CODE = 'code',
  DESCRIPTION = 'description',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should not generate files 1`] = `
Array [
  "endpoints.ts",
]
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should not generate files: endpoints.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #endpoints-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum Endpoints {
  buildings = '/odata/v1/Buildings',
  siteCollections = '/odata/v1/SiteCollections',
  sites = '/odata/v1/Sites',
  units = '/odata/v1/Units',
  unitTypes = '/odata/v1/UnitTypes',
}
export interface IEndpoints {
  readonly buildings: string;
  readonly siteCollections: string;
  readonly sites: string;
  readonly units: string;
  readonly unitTypes: string;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files 1`] = `
Array [
  "building.model.ts",
  "building.properties.ts",
  "endpoints.ts",
  "index.ts",
  "site-collection.model.ts",
  "site-collection.properties.ts",
  "site.model.ts",
  "site.properties.ts",
  "tag.model.ts",
  "tag.properties.ts",
  "unit-tag.model.ts",
  "unit-tag.properties.ts",
  "unit-type.model.ts",
  "unit-type.properties.ts",
  "unit.model.ts",
  "unit.properties.ts",
]
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files 2`] = `
Array [
  "building.model.ts",
  "building.properties.ts",
  "endpoints.ts",
  "index.ts",
  "site-collection.model.ts",
  "site-collection.properties.ts",
  "site.model.ts",
  "site.properties.ts",
  "tag.model.ts",
  "tag.properties.ts",
  "unit-tag.model.ts",
  "unit-tag.properties.ts",
  "unit-type.model.ts",
  "unit-type.properties.ts",
  "unit.model.ts",
  "unit.properties.ts",
]
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: building.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ISite } from './site.model';
import { IUnit } from './unit.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IBuilding {
  id?: string;
  siteId?: string;
  identifier?: string;
  isEnabled?: boolean;
  site?: ISite;
  units?: IUnit[];
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: building.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum BuildingProperties {
  ID = 'id',
  SITE_ID = 'siteId',
  IDENTIFIER = 'identifier',
  IS_ENABLED = 'isEnabled',
  SITE = 'site',
  UNITS = 'units',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: endpoints.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #endpoints-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum Endpoints {
  buildings = '/odata/v1/Buildings',
  siteCollections = '/odata/v1/SiteCollections',
  sites = '/odata/v1/Sites',
  units = '/odata/v1/Units',
  unitTypes = '/odata/v1/UnitTypes',
}
export interface IEndpoints {
  readonly buildings: string;
  readonly siteCollections: string;
  readonly sites: string;
  readonly units: string;
  readonly unitTypes: string;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: index.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #generate-barrel-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export * from './building.model';
export * from './building.properties';
export * from './site-collection.model';
export * from './site-collection.properties';
export * from './site.model';
export * from './site.properties';
export * from './tag.model';
export * from './tag.properties';
export * from './unit-tag.model';
export * from './unit-tag.properties';
export * from './unit-type.model';
export * from './unit-type.properties';
export * from './unit.model';
export * from './unit.properties';
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: site.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ISiteCollection } from './site-collection.model';
import { IBuilding } from './building.model';
import { IUnit } from './unit.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface ISite {
  id?: string;
  tenantId?: string;
  accountId?: string;
  accountName?: string;
  siteCollectionId?: string;
  number?: string;
  name?: string;
  addressLine1?: string;
  addressLine2?: string;
  city?: string;
  state?: string;
  zip?: string;
  isEnabled?: boolean;
  siteCollection?: ISiteCollection;
  buildings?: IBuilding[];
  units?: IUnit[];
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: site.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum SiteProperties {
  ID = 'id',
  TENANT_ID = 'tenantId',
  ACCOUNT_ID = 'accountId',
  ACCOUNT_NAME = 'accountName',
  SITE_COLLECTION_ID = 'siteCollectionId',
  NUMBER = 'number',
  NAME = 'name',
  ADDRESS_LINE_1 = 'addressLine1',
  ADDRESS_LINE_2 = 'addressLine2',
  CITY = 'city',
  STATE = 'state',
  ZIP = 'zip',
  IS_ENABLED = 'isEnabled',
  SITE_COLLECTION = 'siteCollection',
  BUILDINGS = 'buildings',
  UNITS = 'units',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: site-collection.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IBuilding } from './building.model';
import { ISite } from './site.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface ISiteCollection {
  id?: string;
  tenantId?: string;
  number?: string;
  name?: string;
  code?: string;
  addressLine1?: string;
  addressLine2?: string;
  city?: string;
  state?: string;
  zip?: string;
  isSchedulerEnabled?: boolean;
  siteCount?: number;
  workCategoryTypes?: string | number;
  buildings?: IBuilding[];
  sites?: ISite[];
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: site-collection.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum SiteCollectionProperties {
  ID = 'id',
  TENANT_ID = 'tenantId',
  NUMBER = 'number',
  NAME = 'name',
  CODE = 'code',
  ADDRESS_LINE_1 = 'addressLine1',
  ADDRESS_LINE_2 = 'addressLine2',
  CITY = 'city',
  STATE = 'state',
  ZIP = 'zip',
  IS_SCHEDULER_ENABLED = 'isSchedulerEnabled',
  SITE_COUNT = 'siteCount',
  WORK_CATEGORY_TYPES = 'workCategoryTypes',
  BUILDINGS = 'buildings',
  SITES = 'sites',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: tag.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IUnitTag } from './unit-tag.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface ITag {
  id?: string;
  name?: string;
  value?: string;
  unitTags?: IUnitTag[];
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: tag.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum TagProperties {
  ID = 'id',
  NAME = 'name',
  VALUE = 'value',
  UNIT_TAGS = 'unitTags',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: unit.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { IBuilding } from './building.model';
import { ISite } from './site.model';
import { IUnitType } from './unit-type.model';
import { IUnitTag } from './unit-tag.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IUnit {
  id?: string;
  number?: string;
  unitTypeId?: string;
  siteId?: string;
  buildingId?: string;
  isEnabled?: boolean;
  building?: IBuilding;
  site?: ISite;
  unitType?: IUnitType;
  unitTags?: IUnitTag[];
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: unit.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum UnitProperties {
  ID = 'id',
  NUMBER = 'number',
  UNIT_TYPE_ID = 'unitTypeId',
  SITE_ID = 'siteId',
  BUILDING_ID = 'buildingId',
  IS_ENABLED = 'isEnabled',
  BUILDING = 'building',
  SITE = 'site',
  UNIT_TYPE = 'unitType',
  UNIT_TAGS = 'unitTags',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: unit-tag.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ITag } from './tag.model';
import { IUnit } from './unit.model';

// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IUnitTag {
  id?: string;
  unitId?: string;
  tagId?: string;
  value?: string;
  tag?: ITag;
  unit?: IUnit;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: unit-tag.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum UnitTagProperties {
  ID = 'id',
  UNIT_ID = 'unitId',
  TAG_ID = 'tagId',
  VALUE = 'value',
  TAG = 'tag',
  UNIT = 'unit',
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: unit-type.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IUnitType {
  id?: string;
  code?: string;
  description?: string;
}
"
`;

exports[`Url Based - Full Integration Tests MasterCorp Unit Service should skip formGroup Fac files: unit-type.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum UnitTypeProperties {
  ID = 'id',
  CODE = 'code',
  DESCRIPTION = 'description',
}
"
`;
